# sensus-loci

./: .gitignore  .gitmodules  .readthedocs.yaml  README.md  adapt_labels.ipynb  mmdet_install.sh  pyproject.toml  requirements.txt  setup.py
Notebooks/: kitti Alvaro.ipynb  visualization.ipynb
Notebooks/DAIR/000000/: 000000_label.txt
Notebooks/demo/: inference_demo.ipynb
Notebooks/work/: mi_archivo.pkl
docs/: create_docs.sh
docs/scripts/: post_install.sh
docs/source/: api.rst  conf.py  index.rst  readme.md  ros_readme.md  tools.rst  utils.rst
sensus/: __init__.py
sensus/configs/centerpoint/: centerpoint_voxel01_second_secfpn_8xb4-cyclic-20e_dair-3d.py
sensus/configs/dair/: model.py
sensus/configs/dair_centerpoint/: dataset_config.py
sensus/configs/dair_centerpoint_v2/: centerpoint_voxel01_second_secfpn_nus.py  kitti-3d-3class.py
sensus/configs/dair_fcos/: fcos3d_r101-caffe-dcn_fpn_head-gn_8xb2-1x_nus-mono3d_finetune.py  mmdet-schedule-1x.py
sensus/configs/dair_pointpillars/: pointpillars_hv_secfpn_8xb6-160e_kitti-3d-3class.py
sensus/configs/dair_second/: cyclic-40e.py
sensus/configs/fcos3d/: fcos3d_r101-caffe-dcn_fpn_head-gn_8xb2-1x_dair-mono3d.py  fcos3d_r101-caffe-dcn_fpn_head-gn_8xb2-1x_dair-mono3d_finetune.py  fcos3d_r101-caffe-dcn_fpn_head-gn_8xb2-1x_kitti-mono3d_finetune.py  fcos3d_r101_caffe_fpn_gn-head_dcn_2x8_1x_kitti-mono3d.py
sensus/configs/kitti/: dataset_config.py  main_config.py  model.py
sensus/configs/monocon/: monocon-tmp.py
sensus/configs/pointpillars/: pointpillars_hv_secfpn_8xb6-160e_dair-3d-3class.py  pointpillars_hv_secfpn_8xb6-160e_dair-3d-car.py  pointpillars_hv_secfpn_8xb6-160e_dair-infrastructure-3d-3class.py  pointpillars_hv_secfpn_8xb6-160e_dair-vehicle-3d-3class.py
sensus/configs/pv_rcnn/: pv_rcnn_8xb2-80e_dair-infrastructure-3d-3class.py  pv_rcnn_8xb2-80e_dair-vehicle-3d-3class.py
sensus/configs/sassd/: sassd_8xb6-80e_dair-infrastructure-3d-3class.py
sensus/configs/second/: second_hv_secfpn_8xb6-80e_dair-3d-car-pretrained-kitty.py  second_hv_secfpn_8xb6-80e_dair-3d-car.py  second_hv_secfpn_8xb6-80e_dair-infrastructure-3class.py  second_hv_secfpn_8xb6-80e_dair-vehicle-3class.py  second_hv_secfpn_8xb6-80e_dair-vehicle-lidar-reduced-3class.py  second_hv_secfpn_8xb6-80e_kitti-3d-3class-ros.py
sensus/configs/smoke/: smoke_dla34_dlaneck_gn-all_4xb8-6x_dair-mono3d.py  smoke_dla34_dlaneck_gn-all_4xb8-6x_kitti-mono3d.py
sensus/data/: lidar.pickle
sensus/notebooks/: 002238.pkl  dair_visualization.ipynb  first.ipynb  inference_compare.ipynb  inference_pcd.ipynb  jupyter_visualization.ipynb  kitti Alvaro.ipynb  kitti.ipynb  lidar_visualization.ipynb  mono_det.ipynb  monodet_in_lidar.ipynb  monodet_visualization.ipynb  paper_graphs.ipynb  pipeline_viz.ipynb  ros.ipynb  something.py  subsample_dataset.ipynb  visualization.ipynb
sensus/notebooks/tmp/: mono_draw.ipynb  mono_inference.ipynb  sample.pkl
sensus/ros/: README.md  inference.py
sensus/ros/src/ros_sensus/: package.xml  setup.cfg  setup.py
sensus/ros/src/ros_sensus/config/ros/: perception_manager_config.json
sensus/ros/src/ros_sensus/config/rviz/: detections.rviz  perception_visualizer.rviz
sensus/ros/src/ros_sensus/ros_sensus/: bbox_visualizer.py  inference.py  marker_visualizer.py  pc_publisher.py  perception_manager.py  perception_visualizer.py  ros_inference.py  trial.py
sensus/test/: test_sensus.py
sensus/tools/: __init__.py  data_processor.py  tools.py  train.py  visualizer copy.py  visualizer.py
sensus/tools/dataset_converter/: dair_to_kiti.ipynb  split_data.ipynb
sensus/tools/misc/: browse_dataset.py  visualize_results.py
sensus/utils/: __init__.py  data_converter.py
tools/dataset_converter/: dair_to_standard.py
work_dirs/main_config/: last_checkpoint  main_config.py
work_dirs/pointpillars_hv_secfpn_8xb6-160e_kitti-3d-car/: last_checkpoint  pointpillars_hv_secfpn_8xb6-160e_kitti-3d-car.py
work_dirs/second_hv_secfpn_8xb6-80e_dair-3d-car/: last_checkpoint
work_dirs/second_hv_secfpn_8xb6-80e_kitti-3d-car/: last_checkpoint  second_hv_secfpn_8xb6-80e_kitti-3d-car.py
(+50 files in other folders)
