[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'sensus-loci'
version = '0.2.0'
authors = [
    {name='Ãlvaro Ramajo-Ballester', email='aramajo@ing.uc3m.es'},
]
description = '3D object detection from infrastructure for autonomous driving'
readme = 'README.md'
# requires-python = '>=3.8,<3.10'
requires-python = '==3.8.*'
classifiers = [
    'Programming Language :: Python :: 3',
    # 'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    # 'Programming Language :: Python :: 3.9',
    # 'Programming Language :: Python :: 3.10',
    # 'Programming Language :: Python :: 3.11',
    'License :: OSI Approved :: GNU Affero General Public License v3',
    'Natural Language :: English',
    'Operating System :: POSIX :: Linux',
]

keywords = [
    'python',
    'pytorch',
    'deep-learning',
    'computer-vision',
]

dependencies = [
    'torch',
    'mmcv>=2.0.0rc4',
    'mmdet>=3.0.0',
    'mmdet3d>=1.1.0',
    'mmengine',
    'seaborn'
]

[project.optional-dependencies]
dev = [

]
docs = [
    'sphinx==7.1.2',
    'sphinx_rtd_theme==1.3.0',
    'sphinx-copybutton==0.5.1',
    'sphinx-markdown-tables==0.0.17',
    'sphinx-tabs',
    'numpydoc==1.5.0',
    'myst-parser==2.0.0',
    # 'recommonmark==0.7.1',
    # 'sphinx_design',
    # 'furo',
    # 'sphinx-material'
]
full = ['sensus-loci[dev,docs]']

[tool.setuptools.packages]
# find = {include = ['sensus']}
find = {namespaces = false, exclude = ['test']}


[tool.ruff]
line-length = 79
# extend-select = ['Q']
ignore = ['F401']

[tool.ruff.format]
# Prefer single quotes over double quotes.
quote-style = 'single'


[project.urls]
'Homepage' = 'https://github.com/ramajoballester/sensus-loci'
'Bug Tracker' = 'https://github.com/ramajoballester/sensus-loci/issues'